# GomokuAI

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/modules/: MakeTests.cmake
include/: Board.hpp  Brain.hpp  Errors.hpp  MinMax.hpp  Precomputed.hpp  Type.hpp  Utils.hpp
include/Precompute/: SquareLimit.hpp  TranspositionTables.hpp
src/: Board.cpp  Brain.cpp  MinMax.cpp  Utils.cpp  main.cpp
tests/src/: tests.cpp
